tests/testcases/valid/classes/15_this_pointer_members.ciel
// Test 'this' pointer usage in class methods

class Node {
    public:
        int data;
        class Node* next;

        void set_next(class Node* n) {
            this->next = n;
            return;
        }

        class Node* get_next() {
            return this->next;
        }

        int get_data() {
            return this->data;
        }

        class Node* get_this() {
            return this;
        }
};

int main() {
    class Node n1;
    class Node n2;
    n1.data = 10;
    n1.next = (class Node*)0;
    n2.data = 20;
    n2.next = (class Node*)0;
    n1.set_next(&n2);
    class Node* ptr;
    ptr = n1.get_next();
    return ptr->get_data();
}
